WHEELS VERSION 1.2.0 PREVIEW 1 11/18/2012

Model Enhancements
==================
* Allow for self joining tables in associations - #293 [James Gibson]
* Added "joinKey" on belongsTo(), hasOne() and hasMany() which allows you to specify a column to join to on the opposite side of the relationship from the "foreignKey" - [James Gibson]
* Added the ability to multijoin models - [Tony Petruzzi]
* Support for tableless models - [Tony Petruzzi]
* Add findFirst, findLast, findAllKeys, findOneOrCreateBy, findOrCreateBy - #745 [Mike Henke, Per Djurner, Tony Petruzzi]
* Enables use of UTC for wheels timestamps [Andy Bellenie]
* Allow models to be created when with no properties - #84 [rshakespear, Tony Petruzzi]
* Added global setting ("stripFromSQL") to only include safe characters in raw SQL - [Per Djurner]
* Added geometry and geography datatypes (SQLServer) - [Simon Allard]
* Automatic validation now valid that primary keys are the correct type when not blank - [Adam Chapman, Tony Petruzzi]

View Enhancements
=================
* Added a better way to escape all HTML entities - [James Gibson]
* Ability to use custom types (HTML 5) on all form helpers - [Raul Riera, Per Djurner]
* Default to the humanized property name for labels on calculated or non-persistent properties instead of throwing an error - [Andy Bellenie]
* Added escapeHTML argument on simpleFormat() - [Chris Peters]
* Made it possible to set global defaults on autoLink(), excerpt(), highlight() and simpleFormat() - [Chris Peters]
* Added support for array of structs for select() and selectTag() - #680 [William Fisk, Tony Petruzzi]
* Added label and labelTag view helpers - [Tony Petruzzi] 
* Made it possible to set a global default for the "twelveHour" argument on form helpers - [Per Djurner]
* Support for implicit protocol in JavaScriptIncludeTag() and styleSheetLinkTag() - [Per Djurner]
* New form helpers radioButtonTagGroup() and checkBoxTagGroup() - [Chris Peters, Per Djurner]