@@ -1,8 +1,11 @@
-# this file can be deleted if you're not planning on using URL rewriting with IIS 6.
-# you can add your own files and folders that should be excluded from URL rewriting by adding them to the first "RewriteRule" line below.
-# please read the online documentation on http://cfwheels.org for more information about URL rewriting.
+# this file can be deleted if you're not planning on using URL rewriting with IIS 6.
+
+# you can add your own files and folders that should be excluded from URL rewriting by adding them to the first "RewriteRule" line below.
+
+# please read the online documentation on http://cfwheels.org for more information about URL rewriting.
+
 
 # UNCOMMENT ALL LINES BELOW THIS ONE TO TURN ON THE URL REWRITING RULES
 
-# RewriteRule (^/(flex2gateway|jrunscripts|cfide|cfformgateway|railo-context|files|images|javascripts|miscellaneous|stylesheets|robots.txt|sitemap.xml|rewrite.cfm)($|/.*$)) $1 [L,I]
+# RewriteRule (^/(flex2gateway|jrunscripts|cfide|cfformgateway|railo-context|files|images|javascripts|public|stylesheets|robots.txt|sitemap.xml|rewrite.cfm)($|/.*$)) $1 [L,I]
 # RewriteRule ^/(.*)$ /rewrite.cfm/$1 [L]
