@@ -3,5 +3,5 @@
 	Do not delete this file.
 --->
 <cfcomponent output="false" displayName="Model">
-	<cfinclude template="../wheels/model.cfm">
+	<cfinclude template="../../wheels/model.cfm">
 </cfcomponent>
