@@ -2,4 +2,4 @@
 	This is a view file that Wheels uses internally.
 	Do not delete this file or its containing folder.
 --->
-<cfinclude template="../../wheels/public/layout.cfm">
+<cfinclude template="../../../wheels/public/wheels.cfm">
