@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+ <!DOCTYPE urlrewrite
+     PUBLIC "-//tuckey.org//DTD UrlRewrite 3.0//EN"
+     "http://tuckey.org/res/dtds/urlrewrite3.0.dtd">
+
+<urlrewrite use-query-string="true">
+  <rule>
+    <name>CFWheels Rewrite</name>
+    <note>
+    Pretty SEO Urls
+    </note>
+    <condition type="request-uri" operator="notequal">^/(flex2gateway|jrunscripts|cfide|CFFileServlet|cfformgateway|railo-context|public/files|images|javascripts|public|stylesheets|robots.txt|favicon.ico|sitemap.xml|rewrite.cfm)</condition>
+    <from>^(.*)$</from>
+    <to last="true">./rewrite.cfm/$1</to>
+  </rule>
+</urlrewrite>
