@@ -16,7 +16,7 @@
 				<rule name="ColdFusion on Wheels URL Rewriting" enabled="true">
 					<match url="^(.*)$" ignoreCase="true" />
 					<conditions logicalGrouping="MatchAll">
-						<add input="{SCRIPT_NAME}" negate="true" pattern="^/(flex2gateway|jrunscripts|cfide|CFFileServlet|cfformgateway|railo-context|files|images|javascripts|miscellaneous|stylesheets|robots.txt|favicon.ico|sitemap.xml|rewrite.cfm)($|/.*$)" />
+						<add input="{SCRIPT_NAME}" negate="true" pattern="^/(flex2gateway|jrunscripts|cfide|CFFileServlet|cfformgateway|railo-context|public/files|images|javascripts|public|stylesheets|robots.txt|favicon.ico|sitemap.xml|rewrite.cfm)($|/.*$)" />
 					</conditions>
 					<action type="Rewrite" url="/rewrite.cfm/{R:1}" />
 				</rule>
