@@ -74,7 +74,7 @@
 		application.wheels.assetQueryString = true;
 
 	// paths
-	application.wheels.controllerPath = "controllers";
+	application.wheels.controllerPath = "app/controllers";
 
 	// miscellaneous settings
 	application.wheels.dataAttributeDelimiter = "_";
